<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/settings_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:onClick="languageSettings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/settings_credits_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/settings_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_about"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/settings_about_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/settings_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_credits"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</ScrollView>

