<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_delete_dialog"
    android:layout_width="@dimen/book_delete_dialog_width"
    android:layout_height="@dimen/book_delete_dialog_height"
    android:background="@color/white"
    android:padding="15dp">

    <TextView
        android:id="@+id/book_delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/dark_text"
        android:text="@string/catalog_book_delete_confirm" />

    <LinearLayout
        android:layout_below="@id/book_delete_text"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/book_delete_confirm"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_standard_height"
            android:layout_below="@id/book_delete_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_red"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/catalog_book_delete"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/book_delete_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_standard_height"
            android:layout_below="@id/book_delete_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_green"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/catalog_book_delete_cancel"
            android:textColor="@color/white" />
    </LinearLayout>




</RelativeLayout>